# ftr_distributor

./: Anchor.toml  README.md  TO-DO
programs/ftr_distributor/: Cargo.toml
programs/ftr_distributor/src/: lib.rs
tests/: ftr_distributor.js
